--- a/src/index.html
+++ b/src/index.html
@@ -21,10 +21,10 @@
         </button>
         <div class="profile__profile-info">
           <div class="profile__edit-info">
-            <h1 class="profile__name">Жак-Ив Кусто</h1>
+            <h1 class="profile__name"></h1>
             <button class="profile__edit-button" type="button" aria-label="Редактирование профиля" name="edit-profile"></button>
           </div>
-          <p class="profile__about-self">Исследователь океана</p>
+          <p class="profile__about-self"></p>
         </div>
         <button class="profile__add-button" type="button" aria-label="Добавить фото"></button>
       </section>
