--- a/src/index.html
+++ b/src/index.html
@@ -60,7 +60,7 @@
       <div class="popup__form-container">
         <button type="button" class="popup__close" aria-label="Закрыть окно"></button>
         <h2 class="popup__form-header">Редактировать профиль</h2>
-        <form action="#" class="form form_type_edit-profile" name="edit-profile" novalidate>
+        <form action="#" class="form" name="edit-profile" novalidate>
           <input required minlength="2" maxlength="40" type="text" class="form__item form__item_type_name" name="user" placeholder="Имя">
           <span class="form__error-message form__error-message_type_user"> </span>
           <input required minlength="2" maxlength="200" type="text" class="form__item form__item_type_about" name="character" placeholder="О себе">
@@ -74,7 +74,7 @@
       <div class="popup__form-container">
         <button type="button" class="popup__close" aria-label="Закрыть окно"></button>
         <h2 class="popup__form-header">Новое место</h2>
-        <form action="#" class="form form_type_edit-place" name="edit-place" novalidate>
+        <form action="#" class="form" name="edit-place" novalidate>
           <input required minlength="2" maxlength="30" type="text" class="form__item form__item_type_place" name="name" placeholder="Название">
           <span class="form__error-message form__error-message_type_name"></span>
           <input required type="url" class="form__item form__item_type_link" name="link" placeholder="Ссылка на картинку">
@@ -100,7 +100,7 @@
       <div class="popup__form-container">
         <button type="button" class="popup__close" aria-label="Закрыть окно"></button>
         <h2 class="popup__form-header">Вы уверены?</h2>
-        <form action="#" class="form form_type_delete-place" name="delete-place" novalidate>
+        <form action="#" class="form" name="delete-place" novalidate>
           <button type="submit" class="form__submit-button">Да</button>
         </form>
       </div>
@@ -110,7 +110,7 @@
       <div class="popup__form-container">
         <button type="button" class="popup__close" aria-label="Закрыть окно"></button>
         <h2 class="popup__form-header">Обновить аватар</h2>
-        <form action="#" class="form form_type_chenge-avatar" name="chenge-avatar" novalidate>
+        <form action="#" class="form" name="chenge-avatar" novalidate>
           <input required type="url" class="form__item form__item_type_avatar" name="avatar" placeholder="Ссылка на аватар">
           <span class="form__error-message form__error-message_type_avatar"></span>
           <button type="submit" class="form__submit-button">Сохранить</button>
